added p tag, added color, and positioned 15deg

--- a/main.html
+++ b/main.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2D Transformations</title>
-</head>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Give+You+Glory&display=swap" rel="stylesheet">
 <body>
-    <h1>Hello World</h1>
+    <p>RAMBO</p>
 </body>
 </html>
